Update 1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md

--- a/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.4 Understand legal, regulatory, and compliance issues that pertain to information security in a holistic context.md
@@ -531,3 +531,57 @@ A comprehensive security program must align with a variety of external requireme
 | Industry Standards        | Are guidelines and best practices established by professional organizations and bodies within specific sectors. Examples include ISO/IEC 27001 for information security management systems and NIST Cybersecurity Framework.          |                              |                                                                                                                                                                   |
 | Regulatory Requirements   | Are mandates set forth by government agencies and regulatory bodies to ensure compliance with specific standards and protocols (examples are PCI DSS and SOX).                                                                          |                              |                                                                                                                                                                   |
 
+### Open Questions ###
+1. Explain what are contractual requirements and provide two examples.
+<details>
+  <summary>Show answer</summary>
+Contractual requirements are obligations outlined in agreements between parties. Examples include service level agreements (SLAs) and vendor contracts.
+</details>
+
+2. Differentiate between legal and regulatory requirements.
+<details>
+  <summary>Show answer</summary>
+Legal requirements are broad laws and regulations established by governments, while regulatory requirements are specific mandates set by government agencies to ensure compliance within particular sectors or industries.
+</details>
+
+3. List the three primary branches of legal requirements, and briefly describe each.
+<details>
+  <summary>Show answer</summary>
+The three primary branches are: Criminal Law (addresses offenses like theft and fraud), Civil Law (deals with disputes between individuals or organizations, such as contract breaches), and Administrative Law (empowers government bodies to create regulations).
+</details>
+
+4. Why are industry standards important in the context of security? Provide an example.
+<details>
+  <summary>Show answer</summary>
+Industry standards provide guidelines and best practices developed by professional organizations, helping organizations establish a baseline level of security. An example is the ISO/IEC 27001 standard for information security management systems.
+</details>
+
+5. How do service level agreements (SLAs) contribute to security within contractual obligations?
+<details>
+  <summary>Show answer</summary>
+SLAs define the expected level of service for security aspects like system availability, incident response times, and data protection measures, ensuring vendors or service providers meet specific security performance standards.
+</details>
+
+6. Explain how non-disclosure agreements (NDAs) play a role in protecting sensitive information.
+<details>
+  <summary>Show answer</summary>
+NDAs establish legal confidentiality obligations, prohibiting the unauthorized disclosure of sensitive information such as trade secrets, customer data, or internal security practices.
+</details>
+
+7. Why is understanding the difference between criminal and civil law relevant to security professionals?
+<details>
+  <summary>Show answer</summary>
+Understanding the difference is crucial because security breaches can lead to both criminal charges (if illegal activities are involved) and civil lawsuits (for damages caused by negligence or breach of contract).
+</details>
+
+8. How does the NIST Cybersecurity Framework assist organizations in enhancing their security posture?
+<details>
+  <summary>Show answer</summary>
+The NIST Cybersecurity Framework provides a voluntary and adaptable set of guidelines, best practices, and standards to help organizations improve their cybersecurity risk management by identifying, protecting, detecting, responding to, and recovering from threats.
+</details>
+
+9. Briefly explain the role of administrative law in shaping security regulations.
+<details>
+  <summary>Show answer</summary>
+Administrative law grants government agencies the authority to develop and enforce specific regulations related to data protection, privacy, critical infrastructure security, and other areas impacting national security and public interest.
+</details>
