Update 1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md

--- a/DOMAIN1: The Cybersecurity Manager/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
+++ b/DOMAIN1: The Cybersecurity Manager/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
@@ -9,3 +9,34 @@ An investigation will vary based on incident type. As an example, for a financia
 - **Industry Standards**: An industry standards investigation is intended to determine whether an organization is adhering to a specific industry standard or set of standards, such as logging and auditing failed logon attempts. Because industry standards represent well-understood and widely implemented best practices, many organizations try to adhere to them even when they are not required to do so in order to improve security, and reduce operational and other risks.
 
 - **Regulatory**: A regulatory investigation is conducted by a regulatory body, such as the Securities and Exchange Commission (SEC) or Financial Industry Regulatory Authority (FINRA), against an organization suspected of an infraction. In such cases, the organization is required to comply with the investigation, for example, by not hiding or destroying evidence.
+
+```mermaid 
+flowchart TD
+    A[Types of Investigations]:::center
+
+    A --> B1[Administrative]:::type
+    A --> B2[Criminal]:::type
+    A --> B3[Civil]:::type
+    A --> B4[Industry Standards]:::type
+    A --> B5[Regulatory]:::type
+
+    B1 --> D1["Purpose: Inform authorities, often HR-related"]:::desc
+    B1 --> D2["Triggered by: Internal issues (e.g., manager misconduct)"]:::desc
+
+    B2 --> D3["Purpose: Convict perpetrator through court system"]:::desc
+    B2 --> D4["Standard: Beyond reasonable doubt"]:::desc
+    B2 --> D5["Evidence: Must be court-admissible and shareable with defense"]:::desc
+
+    B3 --> D6["Purpose: Resolve disputes over damages or rights"]:::desc
+    B3 --> D7["Example: Trademark or contract disputes"]:::desc
+    B3 --> D8["Standard: Preponderance of evidence"]:::desc
+
+    B4 --> D9["Purpose: Check adherence to best practices (e.g., logging failures)"]:::desc
+    B4 --> D10["Often voluntary but beneficial for reducing risks"]:::desc
+
+    B5 --> D11["Conducted by: Regulatory bodies (e.g., SEC, FINRA)"]:::desc
+    B5 --> D12["Obligations: Must comply; can't destroy or hide evidence"]:::desc
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
