--- a/DOMAIN1: The Cybersecurity Manager/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
+++ b/DOMAIN1: The Cybersecurity Manager/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
@@ -40,3 +40,5 @@ flowchart TD
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
+
+:bulb: To practice, create a consolidated table by combining the information from this paragraph and (#1.4.6 Contractual, legal, industry standards, and regulatory requirements)
