Update 1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md

--- a/DOMAIN1: The Cybersecurity Manager/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
+++ b/DOMAIN1: The Cybersecurity Manager/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
@@ -41,4 +41,4 @@ flowchart TD
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
-:bulb: To practice, create a consolidated table by combining the information from this paragraph and (#1.4.6 Contractual, legal, industry standards, and regulatory requirements)
+:bulb: To practice, create a consolidated table by combining the information from this paragraph and [(#1.4.6 Contractual, legal, industry standards, and regulatory requirements)](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20The%20Cybersecurity%20Manager/1.4%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#146-contractual-legal-industry-standards-and-regulatory-requirements)
