Update 1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md

--- a/DOMAIN1: The Cybersecurity Manager/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
+++ b/DOMAIN1: The Cybersecurity Manager/1.5 Understand requirements for investigation types (i.e., administrative, criminal, civil, regulatory, industry standards).md
@@ -42,3 +42,64 @@ flowchart TD
 ```
 
 :bulb: To practice, create a consolidated table by combining the information from this paragraph and [(#1.4.6 Contractual, legal, industry standards, and regulatory requirements)](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20The%20Cybersecurity%20Manager/1.4%20Understand%20legal%2C%20regulatory%2C%20and%20compliance%20issues%20that%20pertain%20to%20information%20security%20in%20a%20holistic%20context.md#146-contractual-legal-industry-standards-and-regulatory-requirements)
+
+### Open Questions ###
+1. What is the primary difference between a criminal and a civil investigation?
+<details>
+  <summary>Show answer</summary>
+A criminal investigation involves a crime and seeks to convict the perpetrator, while a civil investigation deals with disputes between individuals or entities and typically seeks monetary damages.
+</details>
+
+2. Describe the role of evidence in a criminal investigation.
+<details>
+  <summary>Show answer</summary>
+Evidence in a criminal investigation must be gathered and handled meticulously to be admissible in court, as it aims to prove the suspect's guilt beyond a reasonable doubt.
+</details>
+
+3. Why might an organization choose to adhere to industry standards even when not legally required?
+<details>
+  <summary>Show answer</summary>
+Organizations may adhere to industry standards to enhance security, minimize risks, and demonstrate best practices, even if not legally obligated.
+</details>
+
+4. What distinguishes an administrative investigation from other types?
+<details>
+  <summary>Show answer</summary>
+Administrative investigations focus on gathering information for authorities to determine appropriate action, often related to internal issues like HR concerns.
+</details>
+
+5. Explain the concept of "preponderance of evidence" and its relevance in civil cases.
+<details>
+  <summary>Show answer</summary>
+"Preponderance of evidence" means the evidence presented is more convincing than the opposing side's, which is the standard for winning a civil case.
+</details>
+
+6. What is the typical outcome sought in a civil case?
+<details>
+  <summary>Show answer</summary>
+The typical outcome sought in a civil case is monetary compensation for damages suffered by the plaintiff.
+</details>
+
+7. Provide an example of a situation that might trigger a regulatory investigation.
+<details>
+  <summary>Show answer</summary>
+A company suspected of violating financial regulations, such as insider trading, could trigger a regulatory investigation by the SEC.
+</details>
+
+8. Who typically conducts a regulatory investigation?
+<details>
+  <summary>Show answer</summary>
+Regulatory investigations are conducted by government agencies responsible for enforcing specific regulations, such as the SEC or FINRA.
+</details>
+
+9. Why is it crucial for organizations to cooperate during a regulatory investigation?
+<details>
+  <summary>Show answer</summary>
+Organizations must cooperate with regulatory investigations to avoid penalties and demonstrate compliance with the law.
+</details>
+
+10. How does the burden of proof differ between criminal and civil cases?
+<details>
+  <summary>Show answer</summary>
+In criminal cases, the prosecution must prove guilt "beyond a reasonable doubt," while in civil cases, the plaintiff only needs to demonstrate a "preponderance of evidence."
+</details>
