Update 1.2 Understand and apply security concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.2 Understand and apply security concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.2 Understand and apply security concepts.md
@@ -8,7 +8,7 @@ The five pillars of information security are the principles that guide the desig
 5. **Nonrepudiation** ensures that individuals cannot deny their actions or transactions. It provides evidence to prove that a specific action occurred and that the parties involved cannot refute their involvement. Nonrepudiation mechanisms such as digital signatures, audit trails, and transaction logs help establish accountability and provide a means to trace actions back to their originators. By ensuring nonrepudiation individuals are accountable for their actions in digital transactions.
 
 ```mermaid
-graph LR
+graph TD
     A[Five Pillars of Information Security]
 
     A --> C[Confidentiality]
@@ -31,22 +31,8 @@ graph LR
     N --> N1[Cannot deny actions]
     N --> N2[Logs, signatures, trails]
 
-    style A fill:#009688,color:#fff
-    style C fill:#009688,color:#fff
-    style C1 fill:#009688,color:#fff
-    style C2 fill:#009688,color:#fff
-    style I fill:#009688,color:#fff
-    style I1 fill:#009688,color:#fff
-    style I2 fill:#009688,color:#fff
-    style AV fill:#009688,color:#fff
-    style AV1 fill:#009688,color:#fff
-    style AV2 fill:#009688,color:#fff
-    style AU fill:#009688,color:#fff
-    style AU1 fill:#009688,color:#fff
-    style AU2 fill:#009688,color:#fff
-    style N fill:#009688,color:#fff
-    style N1 fill:#009688,color:#fff
-    style N2 fill:#009688,color:#fff
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 :brain: Every cybersecurity expert should retain knowledge of the five pillars of information security, comprehend their significance, and demonstrate the capability to correctly associate practical examples with the respective pillar.
