Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -51,7 +51,7 @@ Without robust third-party governance, an organization’s security can be under
 By conducting regular documentation reviews, organizations can validate that their security measures are effective and aligned with compliance requirements.
 
 ```mermaid 
-flowchart LR
+flowchart TD
     A[Documentation Review] --> B[Supports ATO<br/>Authority to Operate]
     B --> C[Formal approval for a system to operate]
     
@@ -59,9 +59,8 @@ flowchart LR
     A --> E[Helps Identify Risks<br/>from gaps or inconsistencies]
     A --> F[Improves Audit Readiness<br/>for inspections and compliance checks]
 
-    %% Styling: grayscale
-    classDef grayBox fill:#ffffff,stroke:#999,color:#333;
-    class A,B,C,D,E,F grayBox;
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
 ### Open Questions ###
