--- a/DOMAIN1: The Cybersecurity Manager/1.L.1 Github.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.L.1 Github.md
@@ -4,3 +4,22 @@ GitHub isn't just a tool for software developers—it's a powerful platform for 
 - A GitHub account https://github.com/
 - Basic understanding of Markdown (recommended) https://www.markdownguide.org/
 - (Optional) Git installed locally if you want to work offline
+
+## Step 1: Create a New GitHub Repository ##
+1. Go to https://github.com
+
+2. Click the + icon in the top right → New repository
+
+3. Fill in:
+
+- Repository name: e.g., my-knowledge-base
+
+- Description (optional): "A version-controlled knowledge management system"
+
+- Visibility: Choose Private if it's for personal use only
+
+- Check Initialize this repository with a README
+
+4. Click Create repository
+
+## Step 2: Organize Your Knowledge with Folders and Markdown Files ##
