--- a/DOMAIN1: The Cybersecurity Manager/1.L.1 Github.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.L.1 Github.md
@@ -23,3 +23,17 @@ GitHub isn't just a tool for software developers—it's a powerful platform for 
 4. Click Create repository
 
 ## Step 2: Organize Your Knowledge with Folders and Markdown Files ##
+1. On the repository page, click Add file → Create new file
+
+2. To create a folder, use / in the filename:
+
+- e.g., type: networking/tcp-ip.md
+
+3. Inside the Markdown file, add your knowledge:
+<pre>
+```md  
+# TCP/IP Basics
+TCP/IP is a suite of communication protocols...
+```
+</pre>
+
