Update 1.1 Understand, adhere to, and promote professional ethics.md

--- a/DOMAIN1: The Cybersecurity Manager/1.1 Understand, adhere to, and promote professional ethics.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.1 Understand, adhere to, and promote professional ethics.md
@@ -225,7 +225,7 @@ The code explicitly prohibits discrimination and harassment based on various cha
 </details>
 
 10. What responsibility do IEEE members have towards upholding the code of ethics among their colleagues and coworkers?
-details>  
+<details>  
   <summary>Show answer</summary>
 IEEE members are obligated to support colleagues in upholding the code and to report any violations without fear of retaliation, fostering a culture of ethical conduct.
 </details>
