Update 1.6 Develop, document, and implement security policy, standards, procedures, and guidelines.md

--- a/DOMAIN1: The Cybersecurity Manager/1.6 Develop, document, and implement security policy, standards, procedures, and guidelines.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.6 Develop, document, and implement security policy, standards, procedures, and guidelines.md
@@ -20,4 +20,51 @@ A **Policy** is a document that defines the scope of security needed by the orga
 
 ![Policies](https://github.com/user-attachments/assets/bc8790be-6d65-44d5-87f6-ffbe6ec3e691)
 
+### Open Questions ###
+1. Explain the difference between a policy and a standard in the context of information security.
+<details>
+  <summary>Show answer</summary>
+Policies define high-level security objectives and frameworks, while standards establish mandatory requirements for consistent implementation of security controls. Policies are broader in scope, while standards are more specific and actionable.
+</details>
 
+2. Describe the purpose of a security baseline and its relationship to organizational standards.
+<details>
+  <summary>Show answer</summary>
+A security baseline defines the minimum security level for all systems, ensuring a basic level of protection. It is derived from organizational standards and tailored to specific implementation needs.
+</details>
+
+3. How do procedures contribute to maintaining security within an organization?
+<details>
+  <summary>Show answer</summary>
+Procedures provide detailed instructions for implementing security measures, ensuring consistent execution and minimizing the risk of errors or inconsistencies.
+</details>
+
+4. When are guidelines more beneficial than procedures in implementing security measures?
+<details>
+  <summary>Show answer</summary>
+Guidelines are preferable when flexibility is needed, allowing for adaptation to specific circumstances and encouraging innovation while still adhering to security principles.
+</details>
+
+5. What factors should organizations consider when reviewing their security policies?
+<details>
+  <summary>Show answer</summary>
+Organizations should consider evolving compliance requirements, changes in business strategies, and the needs of external stakeholders to ensure policies remain relevant and effective.
+</details>
+
+6. Why is it important for security policies to avoid excessive detail?
+<details>
+  <summary>Show answer</summary>
+Excessively detailed policies can become cumbersome, difficult to understand, and less adaptable to changing circumstances. Clear and concise policies are easier to implement and maintain.
+</details>
+
+7. How can the adoption of a specific vendor's product unintentionally establish a standard?
+<details>
+  <summary>Show answer</summary>
+If multiple departments independently adopt the same vendor product, it can become a de facto standard due to its widespread use and integration within the organization.
+</details>
+
+8. Explain the role of management in ensuring compliance with security procedures.
+<details>
+  <summary>Show answer</summary>
+Management is responsible for overseeing and auditing security procedures to ensure compliance. This includes establishing monitoring mechanisms, conducting regular reviews, and enforcing disciplinary actions when necessary.
+</details>
