Update 1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements.md

--- a/DOMAIN1: The Cybersecurity Manager/1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements.md
@@ -1,3 +1,5 @@
+## 1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements ##
+
 Business Continuity Planning (BCP) involves assessing the risk to organizational processes and creating policies, plans, and procedures to minimize the impact those risks might have on the organization if they were to occur.
 BCP is used to maintain the continuous operation of a business in the event of an emergency, with a goal to implement a combination of policies, procedures, and processes. Business Continuity requires a lot of planning and preparation. Actual implementation of business continuity processes occur quite infrequently. The primary facets of business continuity are:
 - **Resilience**: (e.g. within a data center and between sites or data centers),
@@ -11,8 +13,8 @@ BCP vs DR:
 
 ``` mermaid
 flowchart TD
-    A[Business Continuity Management (BCM)]:::main --> B[Business Continuity Plan (BCP)]:::bcp
-    A --> C[Disaster Recovery Plan (DR)]:::dr
+    A[Business Continuity Management ]:::main --> B[Business Continuity Plan]:::bcp
+    A --> C[Disaster Recovery Plan]:::dr
 
     B --> B1[Strategic focus]:::desc
     B --> B2[Centered on business processes and operations]:::desc
@@ -29,3 +31,24 @@ flowchart TD
 ```
 
 :necktie: BCP is wider in scope and more strategic than DR.
+
+The Business Continuity Planning process has four main steps:
+1. Project scope and planning: Developing the project scope and plan starts with gaining support of the management team, making a business case (cost/benefit analysis, regulatory or compliance reasons,etc.) and gaining approval to move forward. Next, you need to form a team with representatives from the business as well as IT. Then you are ready to begin developing the plan.
+2. Business impact analysis (BIA):Identify the systems and services that the business relies on and assess the impacts that a disruption or outage would cause, including the impacts on business processes like accounts receivable and sales. You also need to figure out which systems and services you need to get things running again (think foundational IT services such as the network and directory, which many other systems rely on). Finally, prioritize the order in which critical systems and services are recovered or brought back online. As part of the BIA, establish:
+- recovery time objectives (RTO) (how long it takes to recover),
+- recovery point objectives (RPO) (the maximum tolerable data loss), and
+- maximum tolerable downtime (MTD), along with the costs of downtime and recovery
+3. Continuity planning: The first two phases of the BCP process (project scope and planning and the business impact analysis) focus on determining how the BCP process will work and prioritizing the business assets that need to be protected against interruption. The next phase of BCP development, continuity planning, focuses on the development and implementation of a continuity strategy to minimize the impact realized risks might have on protected assets
+There are two primary subtasks involved in continuity planning:
+- Strategy development
+- Provisions and processes
+The goal of this process is to create a continuity of operations plan (COOP), which focuses on how an org will carry out critical business functions starting shortly after a disruption occurs and extending up to one month of sustained operations
+4. Approval and implementation:
+- BCP plan now needs sr. management buy-in (should be endorsed by the org's top exec)
+- BCP team should create an implementation schedule, and all personnel involved should receive training on the plan.
+
+:bulb: The top priority of BCP and DR are people. Always prioritize people's safety. Get people out of harm's way, and only after keep addressing IT recovery and restoration issues.
+
+:link: NIST SP 800-34 contains the guidelines to develop an IT contingency plan: https://www.nist.gov/privacy-framework/nist-sp-800-34
+
+
