Update 1.6 Develop, document, and implement security policy, standards, procedures, and guidelines.md

--- a/DOMAIN1: The Cybersecurity Manager/1.6 Develop, document, and implement security policy, standards, procedures, and guidelines.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.6 Develop, document, and implement security policy, standards, procedures, and guidelines.md
@@ -1,3 +1,5 @@
+## 1.6 Develop, document, and implement security policy, standards, procedures, and guidelines ##
+
 In many organizations, the hierarchy of organizational documents outlines overarching expectations primarily at the policy level, with supplementary documents offering specifics on implementation. These documents not only define standards for conduct and performance but also allow flexibility to adapt to evolving situations and occurrences.
 
 A **Policy** is a document that defines the scope of security needed by the organization and discusses the assets that require protection and the extent to which security solutions should go to provide the necessary protection. The security policy is an overview or generalization of an organization’s security needs. It defines the strategic security objectives, vision, and goals and outlines the security framework of an organization. The security policy is used to assign responsibilities, define roles, specify audit requirements, outline enforcement processes, indicate compliance requirements, and define acceptable risk levels. Compared to other organizational documents, policies tend to remain more stable over time. They offer a foundation for the organization's management, enabling leaders to establish standards and develop procedures that align with the overarching policy objectives. Policies should offer management the necessary flexibility to respond to emerging circumstances or technological advancements without requiring frequent revisions. 
